<resources>
    <string name="app_name">Assignment2</string>


    <string name="my_countries_title">My Countries</string>
    <string name="action_test">Add visit</string>
    <string name="no_countries_added">Add a country</string>
    <string name="year_hint">Year</string>
    <string name="country_hint">Country</string>
    <string name="save_country_year_button">Save</string>
    <string name="add_country_year_text">Add the country and year you visited</string>
    <string name="add_country_toast">Enter both year and country!</string>
    <string name="action_settings">Settings</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="orderyears">Order years by:</string>
    <string name="ordertitle">Order countries by:</string>

    <string name="alarm_clock_title">Alarm Clock</string>
    <string name="AlarmText">Ring ring!</string>
    <string name="AbortAlarm">Cancle alarm</string>
    <string name="AddAlarm">Add alarm</string>
    <string name="DeleteAlarm">Delete alarm</string>
    <string name="NoAlarmSet">No alarm set</string>
    <string name="NoTime">Could not get the time</string>



    <string name="mp3_title">MP3 Player</string>
    <string name="title_activity_main">MP3 Player</string>
    <string name="nosd">Media storage is not available</string>
    <string name="error">Player crashed</string>
    <string name="stop_playback">Stop playback</string>
    <string name="ticker_text">Ticker text</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="play_pause">Play / Pause</string>

</resources>
