<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch223av.dv606.assignment2.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            />

        <Button
            android:id="@+id/my_countries_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonBackground"
            android:text="@string/my_countries_title"
            android:textColor="@color/colorButtonText"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/alarm_clock_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonBackground"
            android:text="@string/alarm_clock_title"
            android:textColor="@color/colorButtonText"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/mp3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonBackground"
            android:text="@string/mp3_title"
            android:textColor="@color/colorButtonText"
            android:layout_margin="4dp"
            />

    </LinearLayout>


</RelativeLayout>
