<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">

    <TextView android:id="@+id/editCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_country_year_text"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"/>

    <EditText android:id="@+id/editYearEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:ems="4"
        android:layout_centerVertical="true"
        android:hint="@string/year_hint" />

    <EditText android:id="@+id/editCountryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:hint="@string/country_hint"
        android:layout_toRightOf="@+id/editYearEditText"
        android:layout_toEndOf="@+id/editYearEditText"
        android:layout_alignTop="@+id/editYearEditText"/>

    <Button android:id="@+id/saveEditVisitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_country_year_button"
        android:textColor="@color/colorText"
        android:background="@color/colorButtonBackground"
        android:layout_below="@+id/editCountryEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"/>
</RelativeLayout>