<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoTime"
        android:textSize="40sp"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        />

    <TextView
        android:id="@+id/alarmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoAlarmSet"
        android:textSize="34sp"
        android:textColor="@color/colorText"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        />

    <Button
        android:id="@+id/deleteAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteAlarm"
        android:textColor="@color/colorButtonText"
        android:textSize="24sp"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:layout_margin="6dp"
        android:padding="6dp"
        />

</LinearLayout>