<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        >

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textSize="24sp"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButtonBackground"
            android:padding="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_pause"
            android:textSize="24sp"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButtonBackground"
            android:padding="4dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="24sp"
            android:textColor="@color/colorButtonText"
            android:background="@color/colorButtonBackground"
            android:padding="4dp"
            android:layout_weight="30"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/playlist_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>
</LinearLayout>
