<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/orderYearsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderyears"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        />

    <RadioGroup
        android:id="@+id/radioGroupYears"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:textColor="@color/colorText"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:textColor="@color/colorText"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/orderCountriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordertitle"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        />

    <RadioGroup
        android:id="@+id/radioGroupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:textColor="@color/colorText"
            />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:textColor="@color/colorText"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/changeTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change text size"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        />

    <SeekBar
        android:id="@+id/textSizeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:max="36"
        />

    <TextView
        android:id="@+id/changeBbColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change background color"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        />

    <Switch
        android:id="@+id/bgColorSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activate night mode"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        />

</LinearLayout>